--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,10 @@
 body {
   color: white;
   background-color: #262a46;
+  font-family: sans-serif;
+
+  .main-words {
+    text-transform: uppercase;
+  }
 }
 
