--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,8 @@ body {
   background-color: #262a46;
   font-family: sans-serif;
 
+  margin: 1rem;
+
   img {
     max-width: 60vw;
     margin: 0 auto;
@@ -11,8 +13,27 @@ body {
     mix-blend-mode: lighten;
   }
 
-  // .main-words {
-  //   text-transform: uppercase;
-  // }
+  ul.post-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    gap: 1rem 1rem;
+
+    li {
+      border: 1px solid white;
+      padding: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    a {
+      color: beige;
+      &:visited {
+        color: peachpuff;
+      }
+    }
+  }
+
 }
 
