--- a/src/index.njk
+++ b/src/index.njk
@@ -6,4 +6,4 @@ permalink: /
 <img src="/img/psychedelic-city.jpeg" alt="psychedelic city">
 
 {% set postslist = collections.posts %}
-{% include "postslist.njk" %}
+{% include "postsList.njk" %}
