reverse the list of posts

--- a/src/_includes/postsList.njk
+++ b/src/_includes/postsList.njk
@@ -1,5 +1,5 @@
 <ul class="post-list">
-  {% for post in postslist %}
+  {%- for post in postslist | reverse -%}
     <li>
       <strong>
         <a href="{{ post.url | url }}">{{ post.data.title }}</a>
@@ -9,5 +9,5 @@
       -
       <p>{{ post.data.description }}</p>
     </li>
-  {% endfor %}
+  {%- endfor -%}
 </ul>
